[package]
name = "unsegen_jsonviewer"
version = "0.2.0"
authors = ["ftilde <ftilde@protonmail.com>"]

description = "An unsegen widget for viewing structured data (json)"
documentation = "https://docs.rs/unsegen_jsonviewer"
repository = "https://github.com/ftilde/unsegen_jsonviewer"
readme = "README.md"
license = "MIT"
keywords = ["terminal", "tui", "json"]

[dependencies]
json = "0.11"
unsegen = "0.2"
